--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"express-session": "^1.16.2",
 		"method-override": "^3.0.0",
 		"mongoose": "^6.3.0",
+		"multer": "^1.4.5-lts.1",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
 		"validator": "^13.7.0"
