--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"multer": "^1.4.5-lts.1",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
+		"uuidv4": "^6.2.13",
 		"validator": "^13.7.0"
 	},
 	"devDependencies": {
